--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <h1>Gary Williams</h1>
+<p> I grew up in Va Beach and I was in wealth management in the banking business for the last 15 years. I want to get into developing to make a difference in the education world via technology</p>
