Added branches together

--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <h1>Gary Williams</h1>
-<p> I grew up in Va Beach and I was in wealth management in the banking business for the last 15 years. I want to get into developing to make a difference in the education world via technology</p>
+  <p> I grew up in Va Beach and I was in wealth management in the banking business for the last 15 years. I want to get into developing to make a difference in the education world via technology</p>
+<h3>Programming Languages<h3>
+  <p>Ruby and Python are the two languages I would like to master</p>
+  <a href="https://github.com/GarylWilliams" target="_blank">My Github Profile</a>
